fixed image gap

--- a/style.css
+++ b/style.css
@@ -454,6 +454,7 @@ body {
 @media (max-width: 480px) {
 
     .images {
+        margin-top: 120px;
         height: 150px;
         width: 150px;
     }
